[tool.poetry]
name = "webprogressiveapplication"
version = "0.1.0"
description = ""
authors = ["Mohammed Husamuddin <uni.husam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
